--- a/Notebooks/Practica 2.ipynb
+++ b/Notebooks/Practica 2.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "4f884f72",
    "metadata": {},
    "outputs": [
@@ -234,6 +234,9 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
     "from functions import calcular_puntos, inicializar_stats, procesar_ronda, mostrar_ranking\n",
     "\n",
     "rounds = [\n",
@@ -289,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
